# django-template-compiler

./: CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench.py
scripts/: run_django_suite.py
src/dtc/: __init__.py  autopatch.py  backend.py  compiler.py  diskcache.py  runtime.py
tests/: conftest.py  support.py  test_backend.py  test_compiler.py  test_fuzz.py
tests/templates/: base.html  child.html  snippet.html
