[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-template-compiler"
dynamic = ["version"]
description = "A drop-in replacement for Django's template engine, 100% compatible including custom tags and filters, but much faster"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Sam Tregar", email = "sam@tregar.com" }]
keywords = ["django", "templates", "compiler", "performance"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = ["django>=4.2"]

[project.urls]
Homepage = "https://github.com/samtregar/django-template-compiler"
Repository = "https://github.com/samtregar/django-template-compiler"
Issues = "https://github.com/samtregar/django-template-compiler/issues"

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[tool.hatch.version]
path = "src/dtc/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dtc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
